fixed alignment of card images and text for mobile displays

--- a/style.css
+++ b/style.css
@@ -93,11 +93,13 @@ li {
 
 .card-body {
     padding: 0.75rem 0 !important;
+    margin-left: 1.2rem !important;
 }
 
 .card img {
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
     height: 200px;
+    margin: auto;
     object-fit: cover;
     width: 200px; 
 }
@@ -141,6 +143,35 @@ h2 {
     margin: 0px;
 }
 
+.getintouch-sec { 
+    display:block;
+}
+
+#myCarousel {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+  
+  @media (min-width: 768px) {
+      .carousel-control-prev {
+        margin-left: -80px;
+        color: black;
+      }
+      
+      .carousel-control-next {
+        margin-right: -80px;
+      }
+  }  
+
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23114659' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23114659' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+}
+
+/* Footer */
 #footer {
     background-color: #124559;
     padding-top: 84px;
@@ -193,32 +224,4 @@ h2 {
     font-weight: bold;
     display: inline-block;
     margin-top: 9px;
-}
-
-.getintouch-sec { 
-    display:block;
-}
-
-#myCarousel {
-    margin-left: 50px;
-    margin-right: 50px;
-  }
-  
-  @media (min-width: 768px) {
-      .carousel-control-prev {
-        margin-left: -80px;
-        color: black;
-      }
-      
-      .carousel-control-next {
-        margin-right: -80px;
-      }
-  }  
-
-.carousel-control-prev-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23114659' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
-}
-
-.carousel-control-next-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23114659' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
